test/arrays/deitz/test_bounds1.good
test_bounds1.chpl:3: error: halt reached - array index out of bounds: (6, 1)
