test/arrays/deitz/test_bounds1.chpl
var A : [1..5, 1..5] integer;

writeln(A(6, 1));
